src/css/footer.module.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Jura:wght@300..700&display=swap');

.wrapper{
    width: 100%;
    height: auto;
    background-color: #03101D;
    position: relative;
    /* bottom: 0; */
    color: white;

    display: flex;
    justify-content: center;
    margin-top: calc(5rem + 10px);
    
}
.unexpendable{
    max-width: 1440px;
    width: 100%;
    display: flex;
    flex-direction: column;
    position: relative;
    
    
}

.finishergrad{
    width: 100%;
    height: 0.4rem;
    background: linear-gradient(to right, #0387D2, #105297);
    position: absolute;
    bottom: 0;
}

.copyright{
    position: absolute;
    /* color: #03101D; */
    right: 0;
    bottom: 0;
    margin: 1rem;
    width: auto;

    font-size: 0.9rem;
    transition: .3s ease;
}


.connect{
    display: flex;
    justify-content:flex-start;
    align-items: center;
    gap: 5rem;
    margin: 2rem;
    width: auto;
}
.socialmedia{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 2rem;
    
}


.stay{
    display: block;
    text-transform: uppercase;
    /* font-family: Jura; */

    font-size: 3rem;
    
    font-weight: bold;

    /* transition: .3s ease; */
    
}

.googlemap{
    border: 0;
    border-radius: 6px;
    width: 35rem;
    margin-inline: 20px;
    
}



.all{
    display: flex;
    justify-content: space-between;
    margin-top: 30px;
}

.text{
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    width: 70%;

    margin-inline: 20px;
    
}

.textcontent{
    font-size: 1rem;
    padding-top: 10px;
    display: flex;
    flex-direction: column;
    gap: 20px;
}


.section{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
    width: 50%;
    padding-right: 10%;
    
}

.textheader{
    /* font-family: Jura; */
    font-size: 2rem;
    text-transform: uppercase;

}

.block{

    font-size: 1rem;
    padding-left: 10px;

    

}



.links{
    font-size: 1rem;
    padding-left : 10px;

}

.links:hover{
    scale: 1.1;
    border-left: 2px solid white;
}


.logos{
    width: 3rem;
    height: auto;
transition: .3s ease;
    
}

.logos:hover{
    transform: scale(1.4);
}



@media only screen and (max-width: 1440px){
    .googlemap{
        width: 40vw;
    }
}

.copyright{

}




/* FOR TABLET */
@media only screen and (max-width: 768px) {

    .unexpendable{
        align-items: center;
    }

    .connect{
        gap:4rem
    }
    .stay{
        font-size: 6vw;
    }
    .copyright{
        font-size: 0.6rem;
        margin: 0.5rem;
    }
    .all{
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }
    .googlemap{
        width: 75vw;
        height: 230px;
    }
    .text{
        width: 90%;

    }

    .section{
        align-items: center;
        justify-content: flex-start;
        margin-bottom: 20px;
        padding-right: 0;
        margin-inline: 5px;
    }
    .textcontent{
        justify-content: flex-start;
        align-items: center;
        text-align: center;
        font-size: 0.9rem;
        
    }
    .textheader{
        font-size: 1.5rem;
    }

}

/* FOR MOBILE */
@media (max-width:425px){

    .unexpendable{
        align-items: center;
    }
    .connect{
        gap: 1rem;
        margin-inline: 0.5rem;
    }
    .stay{
        font-size: 5.8vw;
    }
    .copyright{
        margin: 0.5rem;
        font-size: 0.5rem;
    }

    .text{
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }
    .section{
        width: 90%;
    }
    .googlemap{
        width: 85vw;
        height: 200px;
        margin-inline: 10px;
    }
    .socialmedia{
        gap: 0.5rem;
    }
}

